--- a/examples/salvo.mdx
+++ b/examples/salvo.mdx
@@ -24,8 +24,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-salvo = "0.34.3"
-shuttle-service = { version = "0.11.0", features = ["web-salvo"] }
+salvo = "0.37.5"
+shuttle-salvo = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+tokio = { version = "1.26.0" }
 ```
 Your `main.rs` should look like this:
 
@@ -37,11 +39,11 @@ async fn hello_world(res: &mut Response) {
     res.render(Text::Plain("Hello, world!"));
 }
 
-#[shuttle_service::main]
-async fn salvo() -> shuttle_service::ShuttleSalvo {
+#[shuttle_runtime::main]
+async fn salvo() -> shuttle_salvo::ShuttleSalvo {
     let router = Router::with_path("hello").get(hello_world);
 
-    Ok(router)
+    Ok(router.into())
 }
 ```
 
