--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -24,8 +24,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.5"
-shuttle-service = { version = "0.11.0", features = ["web-axum"] }
+axum = "0.6.10"
+shuttle-axum = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+tokio = { version = "1.26.0" }
 ```
 Your `main.rs` should look like this:
 
@@ -36,11 +38,11 @@ async fn hello_world() -> &'static str {
     "Hello, world!"
 }
 
-#[shuttle_service::main]
-async fn axum() -> shuttle_service::ShuttleAxum {
+#[shuttle_runtime::main]
+async fn axum() -> shuttle_axum::ShuttleAxum {
     let router = Router::new().route("/hello", get(hello_world));
 
-    Ok(router)
+    Ok(router.into())
 }
 ```
 
@@ -73,29 +75,33 @@ edition = "2021"
 
 
 [dependencies]
-axum = { version = "0.5", features = ["ws"] }
-chrono = { version = "0.4", features = ["serde"] }
-futures = "0.3"
-hyper = { version = "0.14", features = ["client", "http2"] }
-hyper-tls = "0.5"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-shuttle-service = { version = "0.11.0", features = ["web-axum"] }
-tokio = { version = "1", features = ["full"] }
+axum = { version = "0.6.10", features = ["ws"] }
+chrono = { version = "0.4.23", features = ["serde"] }
+futures = "0.3.25"
+hyper = { version = "0.14.23", features = ["client", "http2"] }
+hyper-tls = "0.5.0"
+serde = { version = "1.0.148", features = ["derive"] }
+serde_json = "1.0.89"
+shuttle-axum = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+shuttle-static-folder = "0.8.0"
+tokio = { version = "1.26.0", features = ["full"] }
+tower-http = { version = "0.3.0", features = ["fs"] }
 ```
 Your `main.rs` should look like this:
 
 ```rust main.rs
 // main.rs
-use std::{sync::Arc, time::Duration};
+use std::{path::PathBuf, sync::Arc, time::Duration};
 
 use axum::{
     extract::{
         ws::{Message, WebSocket},
         WebSocketUpgrade,
     },
-    response::{Html, IntoResponse},
-    routing::get,
+    http::StatusCode,
+    response::IntoResponse,
+    routing::{get, get_service},
     Extension, Router,
 };
 use chrono::{DateTime, Utc};
@@ -103,11 +109,12 @@ use futures::{SinkExt, StreamExt};
 use hyper::{Client, Uri};
 use hyper_tls::HttpsConnector;
 use serde::Serialize;
-use shuttle_service::ShuttleAxum;
+use shuttle_axum::ShuttleAxum;
 use tokio::{
     sync::{watch, Mutex},
     time::sleep,
 };
+use tower_http::services::ServeDir;
 
 struct State {
     clients_count: usize,
@@ -115,17 +122,18 @@ struct State {
 }
 
 const PAUSE_SECS: u64 = 15;
-const STATUS_URI: &str = "https://api.shuttle.rs/status";
+const STATUS_URI: &str = "https://api.shuttle.rs";
 
 #[derive(Serialize)]
 struct Response {
     clients_count: usize,
-    datetime: DateTime<Utc>,
+    #[serde(rename = "dateTime")]
+    date_time: DateTime<Utc>,
     is_up: bool,
 }
 
-#[shuttle_service::main]
-async fn main() -> ShuttleAxum {
+#[shuttle_runtime::main]
+async fn axum(#[shuttle_static_folder::StaticFolder] static_folder: PathBuf) -> ShuttleAxum {
     let (tx, rx) = watch::channel(Message::Text("{}".to_string()));
 
     let state = Arc::new(Mutex::new(State {
@@ -147,7 +155,7 @@ async fn main() -> ShuttleAxum {
 
             let response = Response {
                 clients_count: state_send.lock().await.clients_count,
-                datetime: Utc::now(),
+                date_time: Utc::now(),
                 is_up,
             };
             let msg = serde_json::to_string(&response).unwrap();
@@ -160,12 +168,18 @@ async fn main() -> ShuttleAxum {
         }
     });
 
+    let serve_dir = get_service(ServeDir::new(static_folder)).handle_error(handle_error);
+
     let router = Router::new()
-        .route("/", get(index))
         .route("/websocket", get(websocket_handler))
+        .fallback_service(serve_dir)
         .layer(Extension(state));
 
-    Ok(router)
+    Ok(router.into())
+}
+
+async fn handle_error(_err: std::io::Error) -> impl IntoResponse {
+    (StatusCode::INTERNAL_SERVER_ERROR, "Something went wrong...")
 }
 
 async fn websocket_handler(
@@ -212,10 +226,6 @@ async fn websocket(stream: WebSocket, state: Arc<Mutex<State>>) {
     // This client disconnected
     state.lock().await.clients_count -= 1;
 }
-
-async fn index() -> Html<&'static str> {
-    Html(include_str!("../index.html"))
-}
 ```
 
 And your `index.html` should look like this:
@@ -224,78 +234,107 @@ And your `index.html` should look like this:
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en" class="bg-gray-600">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Websocket status page</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-    </head>
-    <body class="flex justify-around items-center h-screen w-screen m-0 text-center">
-        <div class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md">
-            <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
-                Current API status
-            </div>
-            <div id="is_ok" class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold uppercase"></div>
-        </div>
-        <div class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md">
-            <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
-                Last check time
-            </div>
-            <div id="datetime" class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold"> </div>
-        </div>
-        <div class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md">
-            <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
-                Clients watching
-            </div>
-            <div id="clients_count" class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold"></div>
-        </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Websocket status page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body
+    class="flex justify-around items-center h-screen w-screen m-0 text-center"
+  >
+    <div
+      class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md"
+    >
+      <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
+        Current API status
+      </div>
+      <div
+        id="is_ok"
+        class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold uppercase"
+      ></div>
+    </div>
+    <div
+      class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md"
+    >
+      <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
+        Last check time
+      </div>
+      <div
+        id="dateTime"
+        class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold"
+      ></div>
+    </div>
+    <div
+      class="flex max-w-sm flex-col overflow-hidden rounded-lg transition blur-md"
+    >
+      <div class="flex-shrink-0 bg-gray-800 text-slate-50 p-5">
+        Clients watching
+      </div>
+      <div
+        id="clients_count"
+        class="flex flex-1 flex-col justify-between p-6 bg-gray-500 text-xl font-bold"
+      ></div>
+    </div>
 
-        <button id="open" class="absolute text-2xl bg-gray-800 text-slate-50 p-2 rounded shadow-lg shadow-slate-800 hover:shadow-md scale-105 hover:scale-100 transition">Open connection</button>
+    <button
+      id="open"
+      class="absolute text-2xl bg-gray-800 text-slate-50 p-2 rounded shadow-lg shadow-slate-800 hover:shadow-md scale-105 hover:scale-100 transition"
+    >
+      Open connection
+    </button>
 
-        <script type="text/javascript">
-         const is_ok = document.querySelector("#is_ok");
-         const datetime = document.querySelector("#datetime");
-         const clients_count = document.querySelector("#clients_count");
-         const button = document.querySelector("button");
+    <script type="text/javascript">
+      const is_ok = document.querySelector('#is_ok');
+      const dateTime = document.querySelector('#dateTime');
+      const clients_count = document.querySelector('#clients_count');
+      const button = document.querySelector('button');
 
-         function track() {
-             const websocket = new WebSocket(`wss://${window.location.host}/websocket`);
+      function track() {
+        const proto = location.protocol.startsWith('https') ? 'wss' : 'ws';
+        const websocket = new WebSocket(
+          `${proto}://${window.location.host}/websocket`,
+        );
 
-             websocket.onopen = () => {
-                 console.log("connection opened");
-                 document.querySelectorAll("body > div").forEach(e => e.classList.remove("blur-md"));
-                 document.querySelector("body > button").classList.add("hidden");
-             }
+        websocket.onopen = () => {
+          console.log('connection opened');
+          document
+            .querySelectorAll('body > div')
+            .forEach((e) => e.classList.remove('blur-md'));
+          document.querySelector('body > button').classList.add('hidden');
+        };
 
-             websocket.onclose = () => {
-                 console.log("connection closed");
-                 document.querySelectorAll("body > div").forEach(e => e.classList.add("blur-md"));
-                 document.querySelector("body > button").classList.remove("hidden");
-             }
+        websocket.onclose = () => {
+          console.log('connection closed');
+          document
+            .querySelectorAll('body > div')
+            .forEach((e) => e.classList.add('blur-md'));
+          document.querySelector('body > button').classList.remove('hidden');
+        };
 
-             websocket.onmessage = (e) => {
-                 const response = JSON.parse(e.data);
+        websocket.onmessage = (e) => {
+          const response = JSON.parse(e.data);
 
-                 if (response.is_up) {
-                     is_ok.textContent = "up";
-                     is_ok.classList.add("text-green-600");
-                     is_ok.classList.remove("text-rose-700");
-                 } else {
-                     is_ok.textContent = "down";
-                     is_ok.classList.add("text-rose-700");
-                     is_ok.classList.remove("text-green-600");
-                 }
+          if (response.is_up) {
+            is_ok.textContent = 'up';
+            is_ok.classList.add('text-green-600');
+            is_ok.classList.remove('text-rose-700');
+          } else {
+            is_ok.textContent = 'down';
+            is_ok.classList.add('text-rose-700');
+            is_ok.classList.remove('text-green-600');
+          }
 
-                 datetime.textContent = new Date(response.datetime).toLocaleString();
-                 clients_count.textContent = response.clients_count;
-             }
-         }
+          dateTime.textContent = new Date(response.dateTime).toLocaleString();
+          clients_count.textContent = response.clients_count;
+        };
+      }
 
-         track();
-         button.addEventListener("click", track);
-        </script>
-    </body>
+      track();
+      button.addEventListener('click', track);
+    </script>
+  </body>
 </html>
 ```
 
