--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -24,24 +24,27 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-poem = "1.3.35"
-shuttle-service = { version = "0.11.0", features = ["web-poem"] }
+poem = "1.3.55"
+shuttle-poem = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+tokio = { version = "1.26.0" }
 ```
 Your `main.rs` should look like this:
 
 ```Rust main.rs
 use poem::{get, handler, Route};
+use shuttle_poem::ShuttlePoem;
 
 #[handler]
 fn hello_world() -> &'static str {
     "Hello, world!"
 }
 
-#[shuttle_service::main]
-async fn main() -> shuttle_service::ShuttlePoem<impl poem::Endpoint> {
+#[shuttle_runtime::main]
+async fn poem() -> ShuttlePoem<impl poem::Endpoint> {
     let app = Route::new().at("/hello", get(hello_world));
 
-    Ok(app)
+    Ok(app.into())
 }
 ```
 Create a project, this will start an isolated deployer container for you under the hood:
@@ -74,12 +77,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mongodb = "2.3.0"
-poem = "1.3.35"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-shuttle-service = { version = "0.11.0", features = ["web-poem"] }
-shuttle-shared-db = { version = "0.11.0", features = ["mongodb"] }
+mongodb = "2.4.0"
+poem = "1.3.55"
+shuttle-poem = { version = "0.1.0" }
+shuttle-shared-db = { version = "0.8.0", features = ["mongodb"] }
+shuttle-runtime = { version = "0.1.0" }
+serde = { version = "1.0.148", features = ["derive"] }
+serde_json = "1.0.89"
+tokio = { version = "1.26.0" }
 ```
 
 Your `main.rs` should look like this:
@@ -97,6 +102,7 @@ use poem::{
     EndpointExt, FromRequest, Request, RequestBody, Result, Route,
 };
 use serde::{Deserialize, Serialize};
+use shuttle_poem::ShuttlePoem;
 
 struct ObjectIdGuard(ObjectId);
 
@@ -140,10 +146,10 @@ async fn add(Json(todo): Json<Todo>, collection: Data<&Collection<Todo>>) -> Res
         .to_string())
 }
 
-#[shuttle_service::main]
-async fn main(
+#[shuttle_runtime::main]
+async fn poem(
     #[shuttle_shared_db::MongoDb] db: Database,
-) -> shuttle_service::ShuttlePoem<impl poem::Endpoint> {
+) -> ShuttlePoem<impl poem::Endpoint> {
     let collection = db.collection::<Todo>("todos");
 
     let app = Route::new()
@@ -151,7 +157,7 @@ async fn main(
         .at("/todo/:id", get(retrieve))
         .with(AddData::new(collection));
 
-    Ok(app)
+    Ok(app.into())
 }
 
 #[derive(Debug, Serialize, Deserialize)]
@@ -190,11 +196,13 @@ edition = "2021"
 
 
 [dependencies]
-poem = "1.3.35"
-serde = "1.0"
-shuttle-service = { version = "0.11.0", features = ["web-poem"] }
-shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
-sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
+poem = "1.3.55"
+serde = "1.0.148"
+shuttle-poem = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
+tokio = { version = "1.26.0" }
 ```
 
 Your `main.rs` should look like this:
@@ -209,7 +217,8 @@ use poem::{
     EndpointExt, Result, Route,
 };
 use serde::{Deserialize, Serialize};
-use shuttle_service::error::CustomError;
+use shuttle_runtime::CustomError;
+use shuttle_poem::ShuttlePoem;
 use sqlx::{Executor, FromRow, PgPool};
 
 #[handler]
@@ -234,10 +243,10 @@ async fn add(Json(data): Json<TodoNew>, state: Data<&PgPool>) -> Result<Json<Tod
     Ok(Json(todo))
 }
 
-#[shuttle_service::main]
-async fn main(
+#[shuttle_runtime::main]
+async fn poem(
     #[shuttle_shared_db::Postgres] pool: PgPool,
-) -> shuttle_service::ShuttlePoem<impl poem::Endpoint> {
+) -> ShuttlePoem<impl poem::Endpoint> {
     pool.execute(include_str!("../schema.sql"))
         .await
         .map_err(CustomError::new)?;
@@ -247,7 +256,7 @@ async fn main(
         .at("/todo/:id", get(retrieve))
         .with(AddData::new(pool));
 
-    Ok(app)
+    Ok(app.into())
 }
 
 #[derive(Deserialize)]
