--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -38,7 +38,7 @@ deployed with a one-liner, as well as dependencies like databases being
 provisioned through static analysis in real-time.
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn rocket(
     #[shuttle_shared_db::Postgres] pool: PgPool, // automatic db provisioning + hands you back an authenticated connection pool
 ) -> ShuttleRocket<...> {
