--- a/tutorials/authentication.mdx
+++ b/tutorials/authentication.mdx
@@ -37,10 +37,10 @@ use axum::{routing::get, Router};
 
 async fn hello_world() -> &'static str { "Hello, world!" }
 
-#[shuttle_service::main] async fn axum() -> shuttle_service::ShuttleAxum { 
+#[shuttle_runtime::main] async fn axum() -> shuttle_axum::ShuttleAxum { 
     let router = Router::new().route("/hello", get(hello_world)); 
 
-    Ok(router)
+    Ok(router.into())
 }
 ```
 
@@ -108,8 +108,8 @@ tera.add_raw_templates(vec![
 We add it via an [Extension](https://docs.rs/axum/latest/axum/struct.Extension.html)(wrapped in `Arc` so that extension cloning does not deep clone all the templates)
 
 ```rust
-#[shuttle_service::main]
-async fn axum() -> shuttle_service::ShuttleAxum {
+#[shuttle_runtime::main]
+async fn axum() -> shuttle_axum::ShuttleAxum {
     let mut tera = Tera::default();
     tera.add_raw_templates(vec![
         ("base.html", include_str!("../templates/base.html")),
@@ -121,7 +121,7 @@ async fn axum() -> shuttle_service::ShuttleAxum {
         .route("/hello", get(hello_world))
         .layer(Extension(Arc::new(tera)));
 
-    Ok(router)
+    Ok(router.into())
 }
 ```
 
@@ -221,7 +221,7 @@ Postgres database using the
 ```rust
 type Database = sqlx::PgPool;
 
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn axum(
     #[shuttle_shared_db::Postgres] pool: Database
 ) -> ShuttleAxum {
@@ -450,7 +450,7 @@ arc and a mutex because generating new identifiers requires mutable access. We
 now have the following main function:
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn axum(
     #[shuttle_shared_db::Postgres] pool: Database
 ) -> ShuttleAxum {
@@ -655,7 +655,7 @@ user it results in one database request, not two!
 We can add the middleware to our chain using:
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn axum(
     #[shuttle_shared_db::Postgres] pool: Database
 ) -> ShuttleAxum {
@@ -778,7 +778,7 @@ seen before but for a login screen. At the end of that we can add two new routes
 with three handlers completing the demo:
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn axum(
     #[shuttle_shared_db::Postgres] pool: Database
 ) -> ShuttleAxum {
@@ -802,7 +802,7 @@ interwebs. Luckily we are using shuttle, so it is as simple as:
 
 `cargo shuttle deploy`
 
-Because of our `#[shuttle_service::main]` annotation and out-the-box Axum
+Because of our `#[shuttle_runtime::main]` annotation and out-the-box Axum
 support our deployment doesn't need any prior config, it is instantly live!
 
 Now you can go ahead with these concepts and add functionality for listing and
