--- a/tutorials/serverless-calendar-app.mdx
+++ b/tutorials/serverless-calendar-app.mdx
@@ -109,11 +109,11 @@ async fn hello_world() -> &'static str {
   "Hello, world!"
 }
 
-#[shuttle_service::main]
-async fn axum() -> shuttle_service::ShuttleAxum {
+#[shuttle_runtime::main]
+async fn axum() -> shuttle_axum::ShuttleAxum {
   let router = Router::new().route("/hello", get(hello_world));
 
-  Ok(router)
+  Ok(router.into())
 }
 ```
 
