--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -110,11 +110,11 @@ fn index() -> &'static str {
     "Hello, world!"
 }
 
-#[shuttle_service::main]
-async fn rocket() -> shuttle_service::ShuttleRocket {
+#[shuttle_runtime::main]
+async fn rocket() -> shuttle_rocket::ShuttleRocket {
     let rocket = rocket::build().mount("/hello", routes![index]);
 
-    Ok(rocket)
+    Ok(rocket.into())
 }
 ```
 
@@ -129,7 +129,9 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
-shuttle-service = { version = "0.11.0", features = ["web-rocket"] }
+shuttle-rocket = { version = "0.1.0" }
+shuttle-runtime = { version = "0.1.0" }
+tokio = { version = "1.26.0" }
 ```
 
 The `init` command also created a new shuttle project for us. This starts an
@@ -186,7 +188,7 @@ section in the docs. I added the `sqlx` dependency to `Cargo.toml` and change
 one line in `main.rs`:
 
 ```rust
-#[shuttle_service::main]
+#[shuttle_runtime::main]
 async fn rocket(#[shuttle_shared_db::Postgres] pool: PgPool) -> ShuttleRocket {
     // [...]
 }
